# rust-test-runner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
.github/: dependabot.yml
.github/workflows/: track_deps_are_up_to_date.yml  update-crate-versions.yml  update-crates-versions.yml
local-registry/: Cargo.toml
src/: cargo_test.rs  cli.rs  lib.rs  main.rs  output.rs  parse_test_code.rs  test_name_formatter.rs
tests/example-all-fail/: expected_results.json
tests/example-all-fail/src/: lib.rs
tests/example-empty-file/: expected_results.json
tests/example-external-crate/: expected_results.json
tests/example-missing-crate/: Cargo.toml  expected_results.json
tests/example-partial-fail/: expected_results.json
tests/example-partial-fail/src/: lib.rs
tests/example-release/: expected_results_old.json
tests/example-release/.meta/: config.json
tests/example-success/: expected_results.json
tests/example-syntax-error/: expected_results.json
tests/example-syntax-error/src/: lib.rs
tests/example-timeout/: Cargo.toml  expected_results.json
tests/example-timeout/src/: lib.rs
tests/example-timeout/tests/: timeout.rs
tests/example-user-output/: Cargo.toml  expected_results.json
tests/example-user-output/src/: lib.rs
tests/example-user-output/tests/: two_plus_two.rs
tests/test-name-formatting/: Cargo.toml  expected_results.json
tests/test-name-formatting/src/: lib.rs
tests/test-name-formatting/tests/: formatter.rs
track_deps_are_up_to_date/: Cargo.toml
track_deps_are_up_to_date/tests/: track_deps_are_up_to_date.rs
