[package]
name = "dummy_package"
version = "0.1.0"
edition = "2021"

[lib]
path = "dummy.rs"

[dependencies]
alloc_counter = "0.0.4"
anyhow = "1.0.72"
array_tool = "1.0.3"
arrayvec = "0.7.4"
arr_macro = "0.2.1"
ascii = "1.1.0"
assert_float_eq = "1.1.3"
as-slice = "0.2.1"
bencher = "0.1.5"
bigdecimal = "0.4.1"
bigint = "4.4.3"
bimap = "0.6.3"
binary-heap-plus = "0.5.0"
binomial-iter = "0.1.0"
bitflags = "2.3.3"
bit-set = "0.5.3"
bit-vec = "0.6.3"
bitvec = "1.0.1"
boolinator = "2.4.0"
bstr = "1.6.0"
bytecount = "0.6.3"
cached = "0.44.0"
case = "1.0.0"
case_insensitive_hashmap = "1.0.0"
caseless = "0.2.1"
cast = "0.3.0"
change-case = "0.2.0"
char-iter = "0.1.0"
char_stream = "0.1.8"
chashmap = "2.2.2"
chrono = "0.4.26"
compare = "0.1.0"
conv = "0.3.3"
convert_case = "0.6.0"
counted-array = "0.1.2"
counter = "0.5.7"
cow-utils = "0.1.2"
criterion = "0.5.1"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.16"
custom_derive = "0.1.7"
dashmap = "5.5.0"
defaultmap = "0.5.0"
derivative = "2.2.0"
derive_more = "0.99.17"
deunicode = "1.3.3"
dia-time = "7.0.0"
digits_iterator = "0.1.0"
divisors = "0.2.1"
divrem = "1.0.0"
duplicate = "1.0.0"
easybench = "1.1.1"
either = "1.8.1"
encode_unicode = "1.0.0"
enum_derive = "0.1.7"
enumflags2 = "0.7.7"
enum-iterator = "1.4.1"
enum-primitive-derive = "0.2.2"
enumset = "1.1.2"
enum-utils = "0.1.2"
eval = "0.4.3"
evalexpr = "11.0.0"
factor = "0.4.0"
factorial = "0.3.0"
failure = "0.1.8"
failure_derive = "0.1.8"
fancy-regex = "0.11.0"
fasteval = "0.2.4"
fixedbitset = "0.4.2"
flagset = "0.4.3"
flame = "0.2.2"
flamer = "0.5.0"
fnv = "1.0.7"
foreach = "0.3.0"
free-ranges = "1.0.7"
frunk = "0.4.2"
gcd = "2.3.0"
generational-arena = "0.2.9"
grapheme = "0.0.0"
hashbag = "0.1.11"
hexlit = "0.5.5"
humantime = "2.1.0"
if_chain = "1.0.2"
im = "15.1.0"
incremental-topo = "0.2.1"
indexmap = "2.0.0"
indoc = "2.0.3"
inflections = "1.1.1"
Inflector = "0.11.4"
integer-sqrt = "0.1.5"
int-enum = "0.5.0"
itertools = "0.11.0"
itoa = "1.0.9"
kmp = "0.1.1"
lazysort = "0.2.1"
lazy_static = "1.4.0"
libm = "0.2.7"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
log = "0.4.19"
luhn = "1.0.1"
macro-attr = "0.2.0"
maplit = "1.0.2"
memoize = "0.4.0"
modexp = "0.2.2"
mod_exp = "1.0.1"
modinverse = "0.1.1"
modulo = "0.1.2"
multimap = "0.9.0"
multiset = "0.0.5"
mustache = "0.9.0"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
num-bigint = "0.4.3"
num_cpus = "1.16.0"
num-derive = "0.4.0"
num-digitize = "0.4.2"
num_enum = "0.6.1"
num-format = "0.4.4"
num-integer = "0.1.45"
numtoa = "0.2.4"
num-traits = "0.2.15"
once_cell = "1.18.0"
onig = "6.4.0"
ordered-float = "3.7.0"
out = "8.0.0"
pathfinding = "4.3.0"
pcre = "0.2.3"
peg = "0.8.1"
permutator = "0.4.3"
permutohedron = "0.2.4"
pest = "2.7.1"
pest_derive = "2.7.1"
petgraph = "0.6.3"
phf = "0.11.2"
phf_macros = "0.11.2"
pprof = "0.12.0"
pretty_assertions = "1.4.0"
primal = "0.3.2"
primes = "0.3.0"
prime_tools = "0.3.4"
proptest = "1.2.0"
queues = "1.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
ramp = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
readonly = "0.2.10"
recur-fn = "2.2.0"
reduce = "0.1.5+deprecated"
regex = "1.9.1"
reikna = "0.12.3"
rs_poker = "3.0.0-alpha.5"
rstest = "0.18.1"
rstest_reuse = "0.6.0"
rug = "1.19.2"
rusqlite = "0.29.0"
rustc-hash = "1.1.0"
rustversion = "1.0.14"
say-number = "1.0.0"
scan_fmt = "0.2.6"
scoped-pool = "1.0.0"
scoped_threadpool = "0.1.9"
serde = "1.0.173"
serde_derive = "1.0.173"
serial_test = "2.0.0"
simplelog = "0.12.1"
simple_parallel = "0.3.0"
sliding_windows = "3.0.0"
slow_primes = "0.1.14"
sparse-bitfield = "0.11.0"
spinning_top = "0.2.5"
static_assertions = "1.1.0"
strfmt = "0.2.4"
stringreader = "0.1.1"
stringsort = "2.0.0"
strum = "0.25.0"
strum_macros = "0.25.1"
subslice = "0.2.3"
test-case = "3.1.0"
thiserror = "1.0.43"
threadpool = "1.8.1"
time = "0.3.23"
tinyset = "0.4.15"
tramp = "0.3.0"
transpose = "0.2.2"
try_opt = "0.2.0"
unicase = "2.6.0"
unic-char-range = "0.9.0"
unic-langid = "0.9.1"
unic-normal = "0.9.0"
unicode-case-mapping = "0.5.0"
unicode-normalization = "0.1.22"
unicode_reader = "1.0.2"
unicode-reverse = "1.0.8"
unicode-segmentation = "1.10.1"
unic-segment = "0.9.0"
unidecode = "0.3.0"
unzip-n = "0.1.2"
uuid = "1.4.1"
voca_rs = "1.15.2"
watch = "0.2.3"
workerpool = "1.2.0"
xvii = "0.4.1"
z3 = "0.11.1"
