[package]
name = "dummy_package"
version = "0.1.0"
edition = "2021"

[lib]
path = "dummy.rs"

[dependencies]
anyhow = "1.0.78"
arrayvec = "0.7.4"
arr_macro = "0.2.1"
ascii = "1.1.0"
bigdecimal = "0.4.1"
bimap = "0.6.3"
binary-heap-plus = "0.5.0"
bitflags = "2.3.3"
bit-set = "0.5.3"
bitvec = "1.0.1"
bstr = "1.9.0"
bytecount = "0.6.3"
cached = "0.46.1"
cast = "0.3.0"
chrono = "0.4.26"
convert_case = "0.6.0"
counter = "0.5.7"
criterion = "0.5.1"
crossbeam = "0.8.3"
crossbeam-channel = "0.5.9"
crossbeam-utils = "0.8.16"
dashmap = "5.5.0"
derive_more = "0.99.17"
digits_iterator = "0.1.0"
divisors = "0.2.1"
divrem = "1.0.0"
duplicate = "1.0.0"
easybench = "1.1.1"
either = "1.8.1"
enum-iterator = "1.4.1"
enum-primitive-derive = "0.3.0"
enumset = "1.1.2"
fixedbitset = "0.4.2"
flagset = "0.4.3"
frunk = "0.4.2"
gcd = "2.3.0"
hashbag = "0.1.11"
hexlit = "0.5.5"
if_chain = "1.0.2"
im = "15.1.0"
indexmap = "2.0.0"
indoc = "2.0.3"
integer-sqrt = "0.1.5"
int-enum = "0.5.0"
itertools = "0.12.0"
itoa = "1.0.10"
kmp = "0.1.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
maplit = "1.0.2"
memoize = "0.4.2"
mod_exp = "1.0.1"
modinverse = "0.1.1"
multimap = "0.9.0"
multiset = "0.0.5"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
num-bigint = "0.4.3"
num_cpus = "1.16.0"
num-derive = "0.4.0"
num_enum = "0.7.0"
num-format = "0.4.4"
num-integer = "0.1.45"
numtoa = "0.2.4"
num-traits = "0.2.15"
once_cell = "1.19.0"
pest = "2.7.1"
pest_derive = "2.7.1"
phf = "0.11.2"
phf_macros = "0.11.2"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
regex = "1.9.1"
rstest = "0.18.1"
rstest_reuse = "0.6.0"
serde = "1.0.193"
serde_derive = "1.0.173"
spinning_top = "0.3.0"
static_assertions = "1.1.0"
strfmt = "0.2.4"
strum = "0.25.0"
strum_macros = "0.25.1"
subslice = "0.2.3"
thiserror = "1.0.53"
threadpool = "1.8.1"
time = "0.3.31"
tinyset = "0.4.15"
transpose = "0.2.2"
unicase = "2.6.0"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
unic-segment = "0.9.0"
unzip-n = "0.1.2"
uuid = "1.6.1"
voca_rs = "1.15.2"
xvii = "0.4.0"
